# curve-fitting

./: CMakeLists.txt  README.md  Test_curve.cpp  curve.cpp  curve.h
data/: 1000_LiDAR.txt  1002_LiDAR.txt  1003_LiDAR.txt  1004_LiDAR.txt  1005_LiDAR.txt  1006_LiDAR.txt  1007_LiDAR.txt  992_LiDAR.txt  994_LiDAR.txt  996_LiDAR.txt  997_LiDAR.txt  998_LiDAR.txt  99_LiDAR.txt
